@@ -10,6 +10,7 @@
    - crypto::mem::Protected::new
    - crypto::mpi::SecretKeyMaterial::from_bytes
    - crypto::mpi::SecretKeyMaterial::from_bytes_with_checksum
+   - fmt::hex::Dumper::with_offset
    - policy::AsymmetricAlgorithm::BrainpoolP384
 ** Deprecated functionality
    - crypto::mpi::SecretKeyMaterial::parse
